==> CONZERN-ITS/can-cube-sat-2021/src/board/ARK/Drivers/its-i2c-link/Src/its-i2c-link.c <==
#include "its-i2c-link.h"
#include <errno.h>
#include <stdio.h>
#include <assert.h>
#include <stdbool.h>
#include <string.h>
#include "main.h"
#define I2C_LINK_DEBUG(...) do { if (0) printf(__VA_ARGS__); } while (0)
#	define I2C_LINK_IS_DMA_ENABLED(dma, channel_or_stream) LL_DMA_IsEnabledChannel(dma, channel_or_stream)
#	define I2C_LINK_DMA_ENABLE(dma, channel_or_stream) LL_DMA_EnableChannel(dma, channel_or_stream)
#	define I2C_LINK_DMA_DISABLE(dma, channel_or_stream) LL_DMA_DisableChannel(dma, channel_or_stream)
#	define I2C_LINK_IS_DMA_ENABLED(dma, channel_or_stream) LL_DMA_IsEnabledStream(dma, channel_or_stream)
#	define I2C_LINK_DMA_ENABLE(dma, channel_or_stream) LL_DMA_EnableStream(dma, channel_or_stream)
#	define I2C_LINK_DMA_DISABLE(dma, channel_or_stream) LL_DMA_DisableStream(dma, channel_or_stream)

int its_i2c_link_start()
{
	i2c_link_ctx_t *ctx = &_ctx;

	int rc = _ctx_construct(ctx);
	if (0 != rc)
		return rc;

	ctx->state = I2C_LINK_STATE_IDLE;

	// Настраиваем периферию и запускаемся
	_bus_gpio_enable(ctx);
	_bus_configure(ctx);

	LL_I2C_EnableIT_EVT(ctx->bus);
	LL_I2C_EnableIT_ERR(ctx->bus);

	return 0;
}

int its_i2c_link_write(const void *data, size_t data_size)
{
	i2c_link_ctx_t *const ctx = &_ctx;
	_bus_resume(ctx);

	if (data_size > I2C_LINK_MAX_PACKET_SIZE)
		return -EINVAL;

	its_i2c_link_pbuf_t *buf = _pbuf_queue_get_head(&ctx->tx_bufs_queue);
	if (0 == buf)
	{
		ctx->stats.tx_overruns_cnt++;
		return -EAGAIN;
	}

	buf->packet_size = data_size;
	memcpy(buf->packet_data, data, data_size);
	memset(buf->packet_data + data_size, 0x00, sizeof(buf->packet_data) - data_size);
	_pbuf_queue_push_head(&ctx->tx_bufs_queue);

	return data_size;
}
