==> CONZERN-ITS/can-cube-sat-2021/src/board/SINS/Drivers/its-i2c-link/Src/its-i2c-link.c <==
#include "../Inc/its-i2c-link.h"
#include <errno.h>
#include <stdio.h>
#include <assert.h>
#include <string.h>
#include "main.h"

int its_i2c_link_start()
{
    i2c_link_ctx_t *  ctx = &_ctx;
    int rc = _ctx_construct(ctx);
    ctx->iface.hi2c = I2C_LINK_BUS_HANDLE;
    ctx->state = I2C_LINK_STATE_IDLE;
    if (0 != rc)
        return rc;

    HAL_StatusTypeDef hal_rc = HAL_I2C_EnableListen_IT(I2C_LINK_BUS_HANDLE);
    rc = _hal_status_to_errno(hal_rc);
    if (0 != rc)
        return rc;

    return 0;
}

int its_i2c_link_write(const void * data, size_t data_size)
{
    i2c_link_ctx_t * const ctx = &_ctx;

    _antihang(ctx);

    if (data_size > I2C_LINK_PACKET_SIZE)
        return -EINVAL;

    its_i2c_link_pbuf_t * buf = _pbuf_queue_get_head(&ctx->tx_bufs_queue);
    if (0 == buf)
    {
        ctx->stats.tx_overrun_cnt++;
        return -EAGAIN;
    }

    buf->packet_size = data_size;
    memcpy(buf->packet_data, data, data_size);

    _pbuf_queue_push_head(&ctx->tx_bufs_queue);

    if (!_pbuf_queue_is_empty(&ctx->tx_bufs_queue)) {
        _i2c_pull_int();
    }

    return data_size;
}
